# lord-of-the-machines

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: base_agent.json  missions.json  model_pricing.json
config/agent_global_rules/: 001-development-process.md
docs/: codebase-academic-modular-refactor.md  qa-agent-integration.md  system-command-tooling.md  technical-architecture-baseline.md  voice-of-the-agents.md
examples/config/missions/: agent-voice-prioritization.json  first-tests.json
scripts/: run-mission.cmd  run-mission.ps1
src/lord_of_the_machines/: __init__.py
src/lord_of_the_machines/agent_tools/: __init__.py
src/lord_of_the_machines/llm/: __init__.py  base_agent.py  config.py  costs.py  envelope.py  errors.py  history.py  log_views.py  memory.py  pagination.py  parser.py  payload.py  prompt_cache.py  protocol_messages.py  rate_limit.py  replies.py  schema.py  tokens.py  tool_definitions.py  tools.py  transport.py
tests/: test_agent_tools_artifact_registry.py  test_agent_tools_event_bus.py  test_agent_tools_kanban_board.py  test_agent_tools_mission_registry.py  test_agent_tools_software_development_environment.py  test_agent_tools_todo_list.py  test_llm_base_agent.py  test_llm_costs.py  test_mission_acceptance.py  test_mission_agent_as_tool.py  test_mission_meeting_tool_agent.py  test_mission_prompting.py  test_mission_run.py  test_mission_runner.py  test_mission_runtime.py  test_mission_software_developer_executor.py  test_mission_software_development_manager_executor.py
tests/helpers/: fake_openai.py  outputs.py
(+55 files in other folders)
