[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lord-of-the-machines"
version = "0.1.0"
description = "Autonomous AI runtime prototype with configurable LLM agent primitives."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=2.0.0",
  "tiktoken>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
